syntax = "proto3";

option csharp_namespace = "Grpc.Shared";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHelloServerStream (HelloStreamRequest) returns (stream HelloReply);
  rpc SayHelloEcho (stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message HelloStreamRequest {
  string name = 1;
  uint32 number_of_messages = 2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

